force-app/main/default/objects/API_Integration_Log__c/API_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>API Integration Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>