force-app/main/default/objects/API_Integration_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>API Integration Logs</relationshipLabel>
    <relationshipName>API_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>