force-app/main/default/objects/API_Integration_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>