force-app/main/default/objects/API_Integration_Log__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <label>Response Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>